--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - google font link
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="my-avatar.png" alt="" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Pavani Kalla</h1>
+          <h1 class="name" title="Pavani Kalla">Pavani Kalla</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">kallapavani21@gmail.com</a>
+              <a href="mailto:kallapavani21@gmail.com" class="contact-link">kallapavani21@gmail.com</a>
             </div>
 
           </li>
