--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="my-avatar.png" alt="" width="80">
+          <img src="avatar-2.png" alt="" width="80">
         </figure>
 
         <div class="info-content">
